Wed Jun 25 09:04:25 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* MP_Env.c: extern "C" wrapper for includes sys/stat.h 

	* MP_Put.c: changed bool identifier to mbool to avaoid clashes
	  when compiling with g++

Fri Jun 20 11:24:18 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* MP_Link.c: MP_SetLinkOptions: case MP_LINK_LOG_MASK_OPT,
	  assigned oldval

Fri Jun  6 15:55:04 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

        * MP_Env.c: Used RawMem function for allocation of
          env->logfilename

Tue May 27 13:57:13 1997  Olaf Bachmann  <obachman@ratchwu>

	* MP_TcpTransp.h: Added fork mode to MPtcp links

Tue May 27 13:57:13 1997  Olaf Bachmann  <obachman@ratchwu>

        * MP_TcpTransp.[h,c]: Added fork mode to MPtcp links

Tue May 20 17:38:53 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* Makefile.in (target MP.h): explicitely user perl to call makeheaders

Sat May  3 19:55:06 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* MP_BigNum.c Changed MP_DEFAULT_BIG* to MP_DEFAULT_AP to reflect
	  names choosen in configure

	* MP_Memory.c (mrealloc): inserted return statements

	* MP_TcpTransp.c: added #include <string.h> for declaration of strcat
	
	* MP_TcpTransp.c: added stdlib.h which conatins declaration of
	  atoi, strtol

	* MP_TcpTransp.c: added #include <unistd.h> which contains
	  declaration of gethostname, vfork, execvp, close (at least on
	  the HP's)

	* MP_Util.c, MP_Env.s: added */ at the end of intro header

	* MP_Get.c: (MP_GetApIntPacket, MP_GetApRealPacket) Fixed logging
	  so that *num_annots instead of num_annot is printed

	* Makefile.in (CPPFLAGS): Put -I. before other CPPFLAGS

Fri May  2 14:18:02 1997  Simon Gray  (sgray@Pooh)

	* MP_Env.c, MPFileTransp.c, MP_Link.c, MP_PvmTransp.c,
	  MP_TbTransp.c, MP_TcpTransp.c, MP_Env.h - Changed transp_type to